Archive/3455c14b41c46596320c5133c4621e7c-793367a52c22d67c60e8f4d72a2f51e2/output
+ g++ -std=c++11 -O3 -Wall -Wextra -Wconversion -pedantic main.cpp
main.cpp: In function ‘int main()’:
main.cpp:14:10: error: call of overloaded ‘bar(foo&)’ is ambiguous
     bar(f);
          ^
main.cpp:14:10: note: candidates are:
main.cpp:6:6: note: void bar(T&) [with T = foo]
 void bar(T&) { std::cout << "void bar(T&)\n"; }
      ^
main.cpp:9:6: note: void bar(T&&) [with T = foo&]
 void bar(T&&) { std::cout << "void bar(T&&)\n"; }
      ^
